# fastcampus_hackerton

./: .gitignore  README.md  SETTING.md  pyproject.toml
app/: Dockerfile  docker-compose.yml  main.py
app/agents/: transfer_agent.py  transfer_state.py
app/core/: config.py  database.py  documents.py  prompt.py  retriever.py  vectorstore.py
app/data/documents/: 쇼핑몰정보.md
app/models/: __init__.py  chat_history.py  document_embedding.py
app/repository/: TestRepository.py
app/routers/: ai_router.py  exaone.py  test.py  test_router.py
app/schema/: MessageTransform.py
app/service/: transfer_service.py
chroma_md/: chroma.sqlite3
notebooks/: 01_load_pdf_to_vectordb.ipynb  02_multimodal_rag.ipynb  exaone_test.ipynb  final_chunking.ipynb  midm_test.ipynb  test.ipynb
notebooks/chroma_md/: chroma.sqlite3
