[project]
name = "fastcampus-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "langchain>=1.2.7",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "pgvector<0.4",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pydantic>=2.12.5",
    "pypdf>=6.6.2",
    "sentence-transformers>=5.2.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
